<resources>
    <string name="app_name">Eventity</string>
    <string name="password_hint">password</string>
    <string name="email_hint">email address</string>
    <string name="login_logo_desc">Loging Page Logo</string>
    <string name="login_button_login">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_btn_text">Create Account</string>
    <string name="reg_to_login_text">Already registered?</string>
    <string name="reg_password_confirm_hint">confirm password</string>
    <string name="reg_logo">Create account logo</string>
    <string name="profile_name_hint">Your name</string>
    <string name="setup_button_name">Save Profile</string>
    <string name="action_profile_text">Profile Settings</string>
    <string name="team_creation_text2">"Creating a team will make you the admin of this team. "</string>
    <string name="team_creation_text">Enter your team name and access code below.</string>
    <string name="team_name_text">Team Name...</string>
    <string name="create_team_btn_txt">Create Team</string>
    <string name="team_code_hint_text">Team Access Code</string>
    <string name="join_team_text">Enter your team name and access code below.</string>
    <string name="join_team_text2">Team name and Access code are case sensitive. If you have any trouble, please contact your a Team Admin.</string>
    <string name="join_team_btn_txt">Send Team Request</string>
    <string name="action_admin_text">Admin Panel</string>
    <string name="action_join_team_txt">Join Team</string>
    <string name="event_title_txt">Add Event Title</string>
    <string name="event_date_txt">Add Event Date</string>
    <string name="event_time_txt">Add Event Time</string>
    <string name="event_location_text">Add Event Location</string>
    <string name="event_desc_text">Add Event Description</string>
    <string name="create_event_btn_txt">Create Event</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_events_text">Events</string>
    <string name="bottom_notifications_text">Notifications</string>
    <string name="question_dialog_title">Ask a question</string>
    <string name="question_dialog_positive">Ask</string>
    <string name="question_dialog_negative">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upcoming_event_txt">Upcoming Events</string>
    <string name="past_event_text">Past Events</string>
    <string name="static_hyphen_texts">-</string>
    <string name="action_create_team_text">Create Team</string>
    <string name="events_upcoming_text">Events</string>
    <string name="event_title_text">Event Title</string>
    <string name="event_text_when">When</string>
    <string name="event_text_where">Where</string>
    <string name="event_text_description">Description</string>
    <string name="event_num_zero">0</string>
    <string name="event_date_text">Date</string>
    <string name="event_time_text">Time</string>
    <string name="event_text_at">at</string>
    <string name="event_text_going">Going</string>
    <string name="event_text_maybe">Maybe</string>
    <string name="event_text_not">Not Going</string>
    <string name="event_location_txt">Location</string>
    <string name="no_team_text_1">It appears you\'re not a member of any team :(</string>
    <string name="no_team_text">Choose an option below to create a new team or join an existing team.</string>
    <string name="create_btn_text">Create A Team</string>
    <string name="join_team_btn">Join A Team</string>
    <string name="pending_team_text">You have a pending membership request and must wait until the team admin adds you.</string>
    <string name="btn_going_txt">Going</string>
    <string name="btn_maybe_txt">Maybe</string>
    <string name="btn_not_text">Not Going</string>
    <string name="qna_text"><![CDATA[Q&A]]></string>
    <string name="question_text">Q:</string>
    <string name="answer_text">A:</string>
    <string name="question_text2">Question Text</string>
    <string name="by_text">by</string>
    <string name="user_name_text">username</string>
    <string name="answer_text_2">Answer Text</string>
    <string name="no_question_text">It seems nobody\'s asked a question yet.</string>
    <string name="got_question_text">Got a question?</string>
    <string name="question_btn_text">Ask it now!</string>
    <string name="askq_hint">Your question...</string>
    <string name="submit">Submit</string>
    <string name="title_activity_admin_panel">AdminPanelActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="team_mgmt_text">Manage Members</string>
    <string name="team_waitlist_text">Waitlist</string>
    <string name="questions_tab_text">Questions</string>
    <string name="empty_waitlist_text">There is currently nobody waiting to access your team. Once a user requests access, their name will appear here.</string>
    <string name="empty_memberlist_txt">Your team is currently empty. Spread the word!</string>
    <string name="unanswered_questions_text">Unanswered Questions</string>
    <string name="empty_admin_questions_txt">Well done! There are currently no open questions from your team!</string>
    <string name="nav_home">Home</string>
    <string name="nav_ep">Edit Profile</string>
    <string name="nav_admin">Admin Panel</string>
    <string name="navbar_name">First Name LastName</string>
    <string name="navbar_role">Member of Team</string>
    <string name="save_btn_txt">SAVE</string>
    <string name="rsvp">Your RSVP:</string>
    <string name="empty_list_view_message">This list is empty.</string>
    <string name="save_btn_edit_txt">UPDATE</string>
    <string name="deleteevent">Are you sure you want to delete this event?</string>
    <string name="deleteeventitle">Delete Event</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="nav_sign_out">Sign Out</string>
    <string-array name="rsvp_array">
        <item>Undecided</item>
        <item>Going</item>
        <item>Maybe</item>
        <item>Not Going</item>
    </string-array>
    <string name="title_activity_view_profile">ViewProfileActivity</string>
    <string name="loading_text">Loading...</string>
    <string name="leave_team_text">Leave Team</string>
    <string name="empty_upevents_text">There are no upcoming events to show. Get planning some!</string>
    <string name="empty_pastevents_text">There are no past events. Hopefully this will change soon!</string>
    <string name="empty_notif_message">There are no notifications to display.</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="new_user_text">New user?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="welcome_back_text">Welcome Back,</string>
    <string name="sign_in_continue">Log in to continue</string>
    <string name="already_registered_text">Already registered?</string>
    <string name="text_log_in">Log in</string>
    <string name="text_confirm_password">Confirm Password</string>
    <string name="text_welcome">Welcome,</string>
    <string name="text_register">Register for a new account below</string>
</resources>
