<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_person_outline_black_24dp"
            android:title="@string/nav_ep" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_grade_black_24dp"
            android:title="@string/nav_admin" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_signout"
            android:icon="@drawable/ic_sign_out"
            android:title="@string/nav_sign_out"/>
    </group>
</menu>